Adding basic and special moves

--- a/Descent into Midnight/DescentIntoMIdnight.html
+++ b/Descent into Midnight/DescentIntoMIdnight.html
@@ -138,6 +138,21 @@
 			<div class="sheet-clearfix"></div>
 		</fieldset>
 	</div>
+
+	<!-- ===== ADVANCEMENT ===== -->
+	<div class="sheet-advancement">
+		<div class="sheet-header">
+			<div class="sheet-section-name">Advancement</div>
+		</div>
+		<label><input type="checkbox" class="sheet-advancementcheck"> <span name="attr_advanceone">Gain another Playbook Move</span></label>
+		<label><input type="checkbox" class="sheet-advancementcheck"> <span name="attr_advancetwo">Gain another Playbook Move</span></label>
+		<label><input type="checkbox" class="sheet-advancementcheck"> <span name="attr_advancethree">Gain an additional Gift from any Playbook</span></label>
+		<label><input type="checkbox" class="sheet-advancementcheck"> <span name="attr_advancefour">Playbook Specific Advancement</span></label>
+		<label><input type="checkbox" class="sheet-advancementcheck"> <span name="attr_advancefive">Increase your Corruption Track by 1</span></label>
+		<label><input type="checkbox" class="sheet-advancementcheck"> <span name="attr_advancesix">Gain a Move from another Playbook</span></label>
+		<label><input type="checkbox" class="sheet-advancementcheck"> <span name="attr_advanceseven">Take an advancement from the Community Playboook</span></label>
+		<label><input type="checkbox" class="sheet-advancementcheck"> <span name="attr_advanceeight">Reflect on how recent events have changed you. Increase two stats by 1 and decrease a stat by 1.</span></label>
+	</div>
     
 	<div class="sheet-clearfix"></div>
 </div>
@@ -159,86 +174,200 @@
 			<textarea name="attr_movebody" class="sheet-hide" placeholder="Move Description"></textarea>
 		</fieldset>
 	</div>
-</div>
 
-<div class="sheet-clearfix"></div>
+	<!-- ===== Basic Moves ===== -->	
+	<div class="sheet-header">
+		<div class="sheet-section-name">Basic Moves</div>
+	</div>
+	<div class="sheet-section-basicmoves">
+		<div class="sheet-basicmove">
+			<span class="sheet-basicmove-name">Scan the Environment</span>
+			<input type="checkbox" class="sheet-toggle" title="show/hide"  value="1" />
+			<div class="sheet-basicmove-description sheet-hide">
+				When you investigate the world around you, describe what sense, expertise, power, or skill you use to interact with your environment, and roll +Community. On a hit, your Guide will show you something about your world. On a 10+ you gain +1 Ongoing until the end of the scene when acting on the information you gain.
+			</div>
+		</div>
+		<div class="sheet-basicmove">
+			<span class="sheet-basicmove-name">Redirect the Current</span>
+			<input type="checkbox" class="sheet-toggle" title="show/hide"  value="1" />
+			<div class="sheet-basicmove-description sheet-hide">
+				When you act to remove an obstacle in your path, roll +Calm. On a hit you succeed at your task and avoid trouble. On a 7-9 the Guide will give you a hard choice, introduce an instability, or enact a cost.
+			</div>
+		</div>
+		<div class="sheet-basicmove">
+			<span class="sheet-basicmove-name">Reach Out</span>
+			<input type="checkbox" class="sheet-toggle" title="show/hide"  value="1" />
+			<div class="sheet-basicmove-description sheet-hide">
+				When you ask for help from nature or your community, roll +Hope. On a hit your pleas are heard. Describe how the natural world or members of your community come
+	to your aid. On a 7-9 the Guide will describe how the help is temporary, unstable, or threatening
+			</div>
+		</div>
+		<div class="sheet-basicmove">
+			<span class="sheet-basicmove-name">Defend Another</span>
+			<input type="checkbox" class="sheet-toggle" title="show/hide"  value="1" />
+			<div class="sheet-basicmove-description sheet-hide">
+				When you risk your own safety to protect another, roll +Altruism. On a hit you protect your ward. On a 7-9, choose two from the following list:
+				<ul>
+					<li>You take the hit</li>
+					<li>You end up in a bad spot</li>
+					<li>You lash out at a friend</li>
+				</ul>
+				On a miss, choose two from the above list, and your ward remains unprotected
+			</div>
+		</div>
+		<div class="sheet-basicmove">
+			<span class="sheet-basicmove-name">Do Something Wondrous</span>
+			<input type="checkbox" class="sheet-toggle" title="show/hide"  value="1" />
+			<div class="sheet-basicmove-description sheet-hide">
+				When you use your gifts in a spectacular way, roll +Drive. On a hit, describe how you accomplished your goal. On a 7-9, choose one:
+				<ul>
+					<li>You suffer a backlash</li>
+					<li>You lose control at the worst time</li>
+					<li>You put others in danger</li>
+				</ul>
+			</div>
+		</div>
+		<div class="sheet-basicmove">
+			<span class="sheet-basicmove-name">Salve Wounds</span>
+			<input type="checkbox" class="sheet-toggle" title="show/hide"  value="1" />
+			<div class="sheet-basicmove-description sheet-hide">
+				When you tend to another’s suffering, ask that player (or the Guide if it’s an NPC) if they accept your help. If the answer is yes, roll +Hope. On a hit, you successfully render aid.
+				<br>If your target is a PC, they clear a Condition or hold 1 Maneuver.
+				<br>If you are tending an NPC, you help them as indicated by the narrative and clear a Condition or a Corruption.
+				<br>On a 10+, you also mark Harmony or hold 1 Maneuver.
+			</div>
+		</div>
+	</div>
+
+	<!-- ===== Special Moves ===== -->
+	<div class="sheet-header">
+		<div class="sheet-section-name">Special Moves</div>
+	</div>
+	<div class="sheet-section-specialmoves">
+		<div class="sheet-specialmove">
+			<span class="sheet-specialmove-name">Act as a Team</span>
+			<input type="checkbox" class="sheet-toggle" title="show/hide"  value="1" />
+			<div class="sheet-specialmove-description sheet-hide">
+				When you face a challenge as a team and choose a team leader, then answer the following questions. <button class="sheet-inlinebutton" name="roll_ActAsATeam" value="">roll +Questions</button> 
+				<ul>
+					<li>
+						<label class="sheet-question-label">
+							<input type="checkbox" name="attr_teamquestion-together" value=1>
+							Are all team members pursuing the same resolution? If yes, add +1
+						</label>
+					</li>
+					<li>
+						<label class="sheet-question-label">
+							<input type="checkbox" name="attr_teamquestion-prepare" value=1>
+							Did the team take time to prepare for the challenge? If yes, add +1
+						</label>
+					</li>
+					<li>
+						<label class="sheet-question-label">
+							<input type="checkbox" name="attr_teamquestion-distrust" value=-1>
+							Does at least one team member not trust another team member? If yes, add -1
+						</label>
+					</li>
+					<li>
+						<label class="sheet-question-label">
+							<input type="checkbox" name="attr_teamquestion-conditions" value=-1>
+							Is every team member suffering the penalties of one or more Conditions? If yes, add -1
+						</label>
+					</li>
+				</ul>
+				On a miss, the leader chooses one team member to hold 1 Maneuver. On a hit, each team member holds 1 Maneuver. On a 10+ the leader chooses one team member to hold 1 additional Maneuver.
+				<br>You may spend Maneuver to do the following. More than one team member may spend Maneuver on the same roll, though no team member may spend more than one Maneuver on a single roll.
+				<ul>
+					<li>
+						<strong>Here to Help:</strong> Spend 1 Maneuver and describe how you are assisting a team member to grant them +1 on a Basic move they’ve just made.
+					</li>
+					<li>
+						<strong>Not on My Watch:</strong> Spend 1 Maneuver to add +1 to a Defend Another or Salve Wounds roll you just made. Describe how your training or relationship helps the target of your move.
+					</li>
+				</ul>
+				A team member loses all unused Maneuver at the end of a session, when significant time has passed, when the narrative dictates there is a break in team cohesion, or if the Guide makes a hard move to do so.
+			</div>
+		</div>
+		<div class="sheet-specialmove">
+			<span class="sheet-specialmove-name">Descend Into Midnight</span>
+			<input type="checkbox" class="sheet-toggle" title="show/hide"  value="1" />
+			<div class="sheet-specialmove-description sheet-hide">
+				When you embrace the negative emotions within you, mark Corruption and treat the result of any roll you just made or are about to make as a 10+. After resolving the Move, tell the Guide who or what was hurt most by your actions and mark the Condition associated with the stat of the Move you just made. If that Condition is already marked, roll to <strong>Resist Corruption</strong>
+			</div>
+		</div>
+		<div class="sheet-specialmove">
+			<span class="sheet-specialmove-name">Unleash</span>
+			<input type="checkbox" class="sheet-toggle" title="show/hide"  value="1" />
+			<div class="sheet-specialmove-description sheet-hide">
+				When you <strong>give in to violence</strong>, roll +Questions
+				<ul>
+					<li>
+						<label class="sheet-question-label">
+							<input type="checkbox" name="attr_unleashquestion-protect" value=1>
+							Are you doing this to protect your community? If yes, +1
+						</label>
+					</li>
+					<li>
+						<label class="sheet-question-label">
+							<input type="checkbox" name="attr_unleashquestion-onlyone" value=1>
+							Are you doing this because you’re the only one who can? If yes, +1
+						</label>
+					</li>
+					<li>
+						<label class="sheet-question-label">
+							<input type="checkbox" name="attr_unleashquestion-nooption" value=1>
+							Are there really no other options? If yes, +1
+						</label>
+					</li>
+				</ul>
+				On a hit, you tear scale from skin and face the consequences. On a 10+, choose one. On a 7-9, choose two:
+				<ul>
+					<li>They retaliate as indicated by the narrative.</li>
+					<li>You lose ground and your opponent gains an opportunity.</li>
+					<li>You lose control in a brutal or terrifying way.</li>
+				</ul>
+			</div>
+		</div>
+		<div class="sheet-specialmove">
+			<span class="sheet-specialmove-name">Endure</span>
+			<input type="checkbox" class="sheet-toggle" title="show/hide"  value="1" />
+			<div class="sheet-specialmove-description sheet-hide">
+				When you <strong>endure physical, emotional, or psychic trauma</strong>, roll +Conditions marked. On a 10+ it takes its toll. Either remove yourself from the scene in some way or choose two from the following list. On a 7-9, choose one:
+				<ul>
+					<li>The trauma unsettles you. Mark a Condition</li>
+					<li>The trauma impairs your physical, emotional, or psychic defenses. Mark Corruption</li>
+					<li>Your attempt to defend yourself goes wrong. Expose an ally to danger.</li>
+				</ul>
+				The trauma damages you in some way. Take -1 Ongoing and remain in pain, distressed, or distracted until you receive help as defined by the narrative.
+				<br>On a 6-, you avoid consequence, and mark Harmony as normal.
+			</div>
+		</div>
+		<div class="sheet-specialmove">
+			<span class="sheet-specialmove-name">Resist Corruption</span>
+			<input type="checkbox" class="sheet-toggle" title="show/hide"  value="1" />
+			<div class="sheet-specialmove-description sheet-hide">
+				When you are <strong>exposed to concentrated or insidious Corruption</strong>, roll +Corruption marked. On a 10+ the corruption works its way deeper into your mind, body, and soul. Mark Corruption. On a 7-9, you stave off the corruption for now, but something inside you is unsettled. Mark a Condition. On a 6-, mark Harmony as normal and hold onto your true self. You keep the corruption at bay and reduce your Corruption score by 1.
+			</div>
+		</div>
+		<div class="sheet-specialmove">
+			<span class="sheet-specialmove-name">What Have We Done?</span>
+			<input type="checkbox" class="sheet-toggle" title="show/hide"  value="1" />
+			<div class="sheet-specialmove-description sheet-hide">
+				When you <strong>pause to reflect on the harm you’ve caused</strong>, roll +Conditions marked. On a hit, you worry that your actions were a part of who you are, who you were, or who you’re becoming. Choose one. On a 10+, also mark Corruption:
+				<ul>
+					<li>Clear Despairing and try to convince someone of an impending doom.</li>
+					<li>Clear Selfish and become overprotective of someone or something of significance.</li>
+					<li>Clear Isolated and push someone close to you away.</li>
+					<li>Clear Angry and lash out at someone close to you or break something of significance.</li>
+					<li>Clear Conflicted and act to prove yourself and your actions.</li>
+					<li>Your actions weigh heavily on you. <strong>Resist Corruption.</strong></li>
+				</ul>
+				On a 6-, clear a Condition and narrate your character coming to terms with the trauma or engaging in a conversation with another to talk about what happened.
+			</div>
+		</div>
+	</div>
+</div>
 <br>
 
-<!-- ===== SPELLS ===== -->
-<div class="sheet-advancement">
-	<div class="sheet-header">
-		<div class="sheet-section-name">Advancement</div>
-	</div>
-	<input type="checkbox" class="sheet-advancementcheck"> <span name="attr_advanceone">Gain another Playbook Move</span><br>
-	<input type="checkbox" class="sheet-advancementcheck"> <span name="attr_advancetwo">Gain another Playbook Move</span><br>
-	<input type="checkbox" class="sheet-advancementcheck"> <span name="attr_advancethree">Gain an additional Gift from any Playbook</span><br>
-	<input type="checkbox" class="sheet-advancementcheck"> <span name="attr_advancefour">Playbook Specific Advancement</span><br>
-	<input type="checkbox" class="sheet-advancementcheck"> <span name="attr_advancefive">Increase your Corruption Track by 1</span><br>
-	<input type="checkbox" class="sheet-advancementcheck"> <span name="attr_advancesix">Gain a Move from another Playbook</span><br>
-	<input type="checkbox" class="sheet-advancementcheck"> <span name="attr_advanceseven">Take an advancement from the Community Playboook</span><br>
-	<input type="checkbox" class="sheet-advancementcheck"> <span name="attr_advanceeight">Reflect on how recent events have changed you. Increase two stats by 1 and decrease a stat by 1.</span>
-</div>
 
-<!-- ===== Move Sheet ===== -->
-<div class="sheet-header">
-	<div class="sheet-section-name">Basic and Special Moves</div>
-</div>
-<div class="sheet-section-basicmoves">
-	<div class="sheet-basicmove">
-		<span name="attr_basicmovename"  class="sheet-basicmove-name">Scan the Environment</span>
-		<input type="checkbox" class="sheet-toggle" title="show/hide" name="attr_move-show" value="1" />
-		<div class="sheet-basicmove-description sheet-hide">
-			When you investigate the world around you, describe what sense, expertise, power, or skill you use to interact with your environment, and roll +Community. On a hit, your Guide will show you something about your world. On a 10+ you gain +1 Ongoing until the end of the scene when acting on the information you gain.
-		</div>
-	</div>
-	<div class="sheet-basicmove">
-		<span name="attr_basicmovename"  class="sheet-basicmove-name">Redirect the Current</span>
-		<input type="checkbox" class="sheet-toggle" title="show/hide" name="attr_move-show" value="1" />
-		<div class="sheet-basicmove-description sheet-hide">
-			When you act to remove an obstacle in your path, roll +Calm. On a hit you succeed at your task and avoid trouble. On a 7-9 the Guide will give you a hard choice, introduce an instability, or enact a cost.
-		</div>
-	</div>
-	<div class="sheet-basicmove">
-		<span name="attr_basicmovename"  class="sheet-basicmove-name">Reach Out</span>
-		<input type="checkbox" class="sheet-toggle" title="show/hide" name="attr_move-show" value="1" />
-		<div class="sheet-basicmove-description sheet-hide">
-			When you ask for help from nature or your community, roll +Hope. On a hit your pleas are heard. Describe how the natural world or members of your community come
-to your aid. On a 7-9 the Guide will describe how the help is temporary, unstable, or threatening
-		</div>
-	</div>
-	<div class="sheet-basicmove">
-		<span name="attr_basicmovename"  class="sheet-basicmove-name">Defend Another</span>
-		<input type="checkbox" class="sheet-toggle" title="show/hide" name="attr_move-show" value="1" />
-		<div class="sheet-basicmove-description sheet-hide">
-			When you risk your own safety to protect another, roll +Altruism. On a hit you protect your ward. On a 7-9, choose two from the following list:
-			<ul>
-				<li>You take the hit</li>
-				<li>You end up in a bad spot</li>
-				<li>You lash out at a friend</li>
-			</ul>
-			On a miss, choose two from the above list, and your ward remains unprotected
-		</div>
-	</div>
-	<div class="sheet-basicmove">
-		<span name="attr_basicmovename"  class="sheet-basicmove-name">Do Something Wondrous</span>
-		<input type="checkbox" class="sheet-toggle" title="show/hide" name="attr_move-show" value="1" />
-		<div class="sheet-basicmove-description sheet-hide">
-			When you use your gifts in a spectacular way, roll +Drive. On a hit, describe how you accomplished your goal. On a 7-9, choose one:
-			<ul>
-				<li>You suffer a backlash</li>
-				<li>You lose control at the worst time</li>
-				<li>You put others in danger</li>
-			</ul>
-		</div>
-	</div>
-	<div class="sheet-basicmove">
-		<span name="attr_basicmovename"  class="sheet-basicmove-name">Salve Wounds</span>
-		<input type="checkbox" class="sheet-toggle" title="show/hide" name="attr_move-show" value="1" />
-		<div class="sheet-basicmove-description sheet-hide">
-			When you tend to another’s suffering, ask that player (or the Guide if it’s an NPC) if they accept your help. If the answer is yes, roll +Hope. On a hit, you successfully render aid.
-			<br>If your target is a PC, they clear a Condition or hold 1 Maneuver.
-			<br>If you are tending an NPC, you help them as indicated by the narrative and clear a Condition or a Corruption.
-			<br>On a 10+, you also mark Harmony or hold 1 Maneuver.
-		</div>
-	</div>
-</div>
+
