Building roll templates

--- a/Descent into Midnight/DescentIntoMIdnight.html
+++ b/Descent into Midnight/DescentIntoMIdnight.html
@@ -32,7 +32,7 @@
 </div>
 <div class="sheet-attributes">
 	<div class="sheet-header">
-		<button type="roll" name="roll_TestHope" value="/me rolls @{Hoperoll}">Hope</button>
+		<button type="roll" name="roll_TestHope" value="/me rolls @{Hoperoll} for Hope">Hope</button>
 		<input type="hidden" value="[[2d6 + @{hope} - @{despairing} + @{ongoing}]]" name="attr_Hoperoll">
 		
 		<div class="sheet-row-1">
@@ -47,7 +47,7 @@
 		</div>
 	</div>
 	<div class="sheet-header">
-		<button type="roll" name="roll_TestAltruism" value="/me rolls @{Altruismroll}">Altruism</button>
+		<button type="roll" name="roll_TestAltruism" value="/me rolls @{Altruismroll} for Altruism">Altruism</button>
 		<input type="hidden" value="[[2d6 + @{altruism} - @{selfish} + @{ongoing}]]" name="attr_Altruismroll">
 
 		<div class="sheet-row-1">
@@ -62,7 +62,7 @@
 		</div>
 	</div>
 	<div class="sheet-header">
-		<button type="roll" name="roll_TestCommunity" value="/me rolls @{Communityroll}">Community</button>
+		<button type="roll" name="roll_TestCommunity" value="/me rolls @{Communityroll} for Community">Community</button>
 		<input type="hidden" value="[[2d6 + @{community} - @{isolated} + @{ongoing}]]" name="attr_Communityroll">
 
 		<div class="sheet-row-1">
@@ -77,7 +77,7 @@
 		</div>
 	</div>
 	<div class="sheet-header">
-		<button type="roll" name="roll_TestCalm" value="/me rolls @{Calmroll}">Calm</button>
+		<button type="roll" name="roll_TestCalm" value="/me rolls @{Calmroll} for Calm">Calm</button>
 		<input type="hidden" value="[[2d6 + @{calm} - @{angry} + @{ongoing}]]" name="attr_Calmroll">
 
 		<div class="sheet-row-1">
@@ -92,7 +92,7 @@
 		</div>
 	</div>
 	<div class="sheet-header">
-		<button type="roll" name="roll_TestDrive" value="/me rolls @{Driveroll}">Drive</button>
+		<button type="roll" name="roll_TestDrive" value="/me rolls @{Driveroll} for Drive">Drive</button>
 		<input type="hidden" value="[[2d6 + @{drive} - @{conflicted} + @{ongoing}]]" name="attr_Driveroll">
 
 		<div class="sheet-row-1">
@@ -258,7 +258,11 @@
 			<span class="sheet-specialmove-name">Act as a Team</span>
 			<input type="checkbox" class="sheet-toggle" title="show/hide"  value="1" />
 			<div class="sheet-specialmove-description sheet-hide">
-				When you face a challenge as a team and choose a team leader, then answer the following questions. <button class="sheet-inlinebutton" name="roll_ActAsATeam" value="">roll +Questions</button> 
+				When you face a challenge as a team and choose a team leader, then answer the following questions. 
+				<button class="sheet-inlinebutton" name="roll_ActAsATeam" 
+				value="&{template:basic} {{name=Act As a Team}} 
+				{{roll=[[2d6+@{teamquestion-together}+@{teamquestion-prepare}+@{teamquestion-distrust}+@{teamquestion-conditions}]]}} 
+				{{Hit= The leader chooses one team member to hold 1 additional Maneuver.}} {{Partial = Each team member holds 1 Maneuver.}} {{Miss = The leader chooses one team member to hold 1 Maneuver.}}">Roll +Questions</button> 
 				<ul>
 					<li>
 						<label class="sheet-question-label">
@@ -386,6 +390,7 @@
 	{{Hit= Hit Content}} {{Partial = Partial Content}} {{Miss = Miss Content}}-->
 
 <rolltemplate class="sheet-rolltemplate-basic">
+	<div class="sheet-container">
 	<div class="sheet-template-header">{{name}}</div>
 	<div class="sheet-template-row"><strong>Roll:</strong> {{rollvalue}}</div>
 	{{#rollGreater() rollvalue 9}} <div class="sheet-template-row">
@@ -395,8 +400,10 @@
 		<strong>Result:</strong> {{Partial}}
 	</div>{{/rollLess() rollvalue 7}}
 	{{#rollBetween rollvalue 7 9}} <div class="sheet-template-row">
+		Mark Harmony.<br>
 		<strong>Result:</strong> {{Miss}}
 	</div>{{/rollLess() rollvalue 7}}
+	</div>
 </rolltemplate>
 
 <!-- <rolltemplate class="sheet-rolltemplate-hit">
