Fixed the rolls

--- a/Descent into Midnight/DescentIntoMIdnight.html
+++ b/Descent into Midnight/DescentIntoMIdnight.html
@@ -259,10 +259,9 @@
 			<input type="checkbox" class="sheet-toggle" title="show/hide"  value="1" />
 			<div class="sheet-specialmove-description sheet-hide">
 				When you face a challenge as a team and choose a team leader, then answer the following questions. 
-				<button class="sheet-inlinebutton" name="roll_ActAsATeam" 
-				value="&{template:basic} {{name=Act As a Team}} 
-				{{roll=[[2d6+@{teamquestion-together}+@{teamquestion-prepare}+@{teamquestion-distrust}+@{teamquestion-conditions}]]}} 
-				{{Hit= The leader chooses one team member to hold 1 additional Maneuver.}} {{Partial = Each team member holds 1 Maneuver.}} {{Miss = The leader chooses one team member to hold 1 Maneuver.}}">Roll +Questions</button> 
+				<button type="roll" class="sheet-inlinebutton" name="roll_ActAsATeam" 
+				value="&{template:dim} {{name=Act As a Team}} {{rollvalue=[[2d6+@{teamquestion-together}+@{teamquestion-prepare}+@{teamquestion-distrust}+@{teamquestion-conditions}]]}} {{Hit= The leader chooses one team member to hold 1 additional Maneuver.}} {{Partial= Each team member holds 1 Maneuver.}} {{Miss= The leader chooses one team member to hold 1 Maneuver.}}">
+				Roll +Questions</button> 
 				<ul>
 					<li>
 						<label class="sheet-question-label">
@@ -381,28 +380,36 @@
 		</div>
 	</div>
 </div>
-<br>
 
 
 <!-- ROLL TEMPLATES -->
 
-<!-- &{template:basic} {{name=Test}} {{roll=[[2d6]]}} 
-	{{Hit= Hit Content}} {{Partial = Partial Content}} {{Miss = Miss Content}}-->
+<!-- &{template:dim} {{name=Test}} 
+	{{rollvalue=[[2d6]]}} 
+	{{Hit= Hit Content}} 
+	{{Partial = Partial Content}} 
+	{{Miss = Miss Content}}-->
 
-<rolltemplate class="sheet-rolltemplate-basic">
+<rolltemplate class="sheet-rolltemplate-dim">
 	<div class="sheet-container">
-	<div class="sheet-template-header">{{name}}</div>
-	<div class="sheet-template-row"><strong>Roll:</strong> {{rollvalue}}</div>
-	{{#rollGreater() rollvalue 9}} <div class="sheet-template-row">
-		<strong>Result:</strong> {{Hit}}
-	</div>{{/rollGreater() rollvalue 9}}
-	{{#rollLess() rollvalue 7}} <div class="sheet-template-row">
-		<strong>Result:</strong> {{Partial}}
-	</div>{{/rollLess() rollvalue 7}}
-	{{#rollBetween rollvalue 7 9}} <div class="sheet-template-row">
-		Mark Harmony.<br>
-		<strong>Result:</strong> {{Miss}}
-	</div>{{/rollLess() rollvalue 7}}
+		<div class="sheet-template-header">{{name}}</div>
+		<div class="sheet-template-row"><em>Roll:</em> {{rollvalue}}</div>
+		{{#rollGreater() rollvalue 6}} 
+			<div class="sheet-template-row">
+				<strong>Hit:</strong> {{Partial}}
+			</div>
+		{{/rollGreater() rollvalue 6}}
+		{{#rollGreater() rollvalue 9}}
+			<div class="sheet-template-row">
+				<strong>Hit+:</strong> {{Hit}}
+			</div>
+		{{/rollGreater() rollvalue 9}}
+		{{#rollLess() rollvalue 7}} 
+			<div class="sheet-template-row">
+				Mark Harmony.<br>
+				<strong>Miss:</strong> {{Miss}}
+			</div>
+		{{/rollLess() rollvalue 7}}
 	</div>
 </rolltemplate>
 
